src/objects/VP_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecast_Value_Low__c</fullName>
        <inlineHelpText>In Thousands</inlineHelpText>
        <label>Forecast Value Low</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecast_Value_Upside__c</fullName>
        <inlineHelpText>In Thousands</inlineHelpText>
        <label>Forecast Value Upside</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecast_Value__c</fullName>
        <inlineHelpText>In Thousands</inlineHelpText>
        <label>Forecast Value Commit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geo_Name__c</fullName>
        <label>Geo Name</label>
        <picklist>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <label>Region Name</label>
        <picklist>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA South</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>VP Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Geo_Name__c</columns>
        <columns>Forecast_Value_Low__c</columns>
        <columns>Forecast_Value__c</columns>
        <columns>Forecast_Value_Upside__c</columns>
        <columns>Close_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Region_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>VP-{0000}</displayFormat>
        <label>VP Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VP Forecasts</pluralLabel>
    <recordTypes>
        <fullName>GEO</fullName>
        <active>true</active>
        <description>Geo VP Forecast</description>
        <label>GEO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Region</fullName>
        <active>true</active>
        <description>Regional VP Forecast</description>
        <label>Region</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>